--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-
-
-
-logging.level.org.springframework: TRACE
-logging.level.com: TRACE
+        
+# Use the below only for local testing, comment it out when pushing to Git
+# logging.level.org.springframework: TRACE
+# logging.level.com: TRACE
